--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "check": "npm run eslint && npm run prettier",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
+  "engines": {
+    "node": "14.19.1",
+    "npm": "6.14.16"
+  },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
     "@chakra-ui/icons": "^1.1.7",
