--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "engines": {
     "node": "14.19.1",
-    "npm": "6.14.16"
+    "npm": "6.14.16",
+    "meteor": "2.7.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
