--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "engines": {
     "node": "14.19.1",
-    "npm": "6.14.16",
-    "meteor": "2.7.1"
+    "npm": "6.14.16"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
