--- a/package.json
+++ b/package.json
@@ -24,19 +24,21 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.3.0",
+    "i18next": "^21.8.4",
     "meteor-node-stubs": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.16.9",
     "react-router-dom": "^6.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@quave/eslint-config-quave": "^1.0.7",
     "@types/meteor": "^2.6.2",
-    "@types/mocha": "^8.2.3",
+    "@types/meteor-astronomy": "^2.6.6",
     "@types/meteor-mdg-validated-method": "^1.2.4",
-    "@types/meteor-astronomy": "^2.6.6"
+    "@types/mocha": "^8.2.3"
   },
   "meteor": {
     "mainModule": {
